--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -152,7 +152,7 @@ ChatScreen As screen:
                 Size: |
                     =//21.36
                     If(Parent.Width<500,14,Parent.Width>500,20)
-                Text: ="Technician Lead Generation"
+                Text: =VarLtdCntNumber
                 Width: =Parent.Width-imgSchindlerLogoDS_3.Width-IconMenuDS_3.Width-Button2_4.Width-60
                 ZIndex: =2
 
@@ -222,8 +222,8 @@ ChatScreen As screen:
                     RGBA(0, 0, 0, 0)
                 Height: =Parent.Height-TextInput1_2.Height
                 Items: |-
-                    =//Sort(Filter(Chats,LeadNo.crd59_leadinformationid=Gallery1.Selected.LeadInformation),Datetime,SortOrder.Ascending)
-                    [{
+                    =Sort(Filter(LeadChats,LeadInformationLID.ID=glryLeadsSLS.Selected.ID),'Created On',SortOrder.Ascending)
+                    /*[{
                         message:"Check doors again",
                         time:"12.59 AM",
                         name:"QQ Team",
@@ -241,7 +241,7 @@ ChatScreen As screen:
                         name:"QQ Team",
                         from:"you"
                     }
-                    ]
+                    ]*/
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
                 OnSelect: |-
@@ -259,7 +259,7 @@ ChatScreen As screen:
                 ZIndex: =3
 
                 Rectangle6 As rectangle:
-                    Fill: =If(ThisItem.from="you", RGBA(237, 237, 237, 1),RGBA(255,255,255,1))
+                    Fill: =If(ThisItem.FromEmail=User().Email, RGBA(237, 237, 237, 1),RGBA(255,255,255,1))
                     Height: =Label6_2.Height+Label8_2.Height
                     OnSelect: =Select(Parent)
                     Width: =Parent.Width-30
@@ -267,7 +267,7 @@ ChatScreen As screen:
                     ZIndex: =1
 
                 Label6_2 As label:
-                    Align: =If(ThisItem.from="me",Align.Right,Align.Left)
+                    Align: =If(ThisItem.FromEmail=User().Email,Align.Right,Align.Left)
                     AutoHeight: =true
                     Font: =Font.Arial
                     Height: =25
@@ -275,12 +275,12 @@ ChatScreen As screen:
                     PaddingLeft: =20
                     PaddingRight: =50
                     Size: =18
-                    Text: =ThisItem.message
+                    Text: =ThisItem.Message
                     Width: =Parent.Width
                     ZIndex: =2
 
                 Label8_2 As label:
-                    Align: =If(ThisItem.from="me",Align.Right,Align.Left)
+                    Align: =If(ThisItem.FromEmail=User().Email,Align.Right,Align.Left)
                     Font: =Font.Arial
                     Height: =30
                     OnSelect: =Select(Parent)
@@ -289,7 +289,7 @@ ChatScreen As screen:
                     Size: =14
                     Text: |-
                         =//ThisItem.From & "  "& ThisItem.Datetime
-                        ThisItem.name & "  " &ThisItem.time
+                        ThisItem.FromName & "  " &ThisItem.'Created On'
                     Width: =Parent.Width
                     Y: =Label6_2.Y+Label6_2.Height
                     ZIndex: =3
