--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -212,7 +212,7 @@ ChatScreen As screen:
                 PaddingLeft: =5
                 PaddingRight: =5
                 Width: =100
-                X: =TextInput1_2.Width-(Self.Width)/1.2
+                X: =TextInput1_2.Width-(Self.Width)
                 Y: =Gallery4_2.Height
                 ZIndex: =2
 
