--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -555,7 +555,7 @@ CreatLeadScreen As screen:
                         Height: =If(VarZipcode,48,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: =Parent.DisplayName
-                        Visible: =VarZipcode
+                        Visible: =VarZipcode || !IsBlank(IntxtZipCode)
                         Width: =Parent.Width - 50
                         Wrap: =false
                         X: =28
@@ -645,7 +645,7 @@ CreatLeadScreen As screen:
                         Text: |-
                             =//Parent.DisplayName
                             "Building Name"
-                        Visible: =VarBuildingName
+                        Visible: =VarBuildingName || !IsBlank(IntxtBuildingName)
                         Width: =Parent.Width - 50
                         Wrap: =false
                         X: =28
@@ -735,7 +735,7 @@ CreatLeadScreen As screen:
                         Height: =If(VarAddress,48,0)
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: =Parent.DisplayName
-                        Visible: =VarAddress
+                        Visible: =VarAddress || !IsBlank(IntxtAddress)
                         Width: =Parent.Width - 50
                         Wrap: =false
                         X: =28
