--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -399,8 +399,8 @@ LeadScreen As screen:
                         PaddingRight: =50
                         Size: =14
                         Text: |-
-                            =//ThisItem.FromName & "  " &ThisItem.'Modified On'
-                            If(ThisItem.IsQQApp=true,ThisItem.FromName &  " " &ThisItem.'Modified On',ThisItem.ToName & " " & ThisItem.'Modified On')
+                            =ThisItem.FromName & "  " &ThisItem.'Modified On'
+                            //If(ThisItem.IsQQApp=true,ThisItem.FromName &  " " &ThisItem.'Modified On',ThisItem.ToName & " " & ThisItem.'Modified On')
                         Width: =Parent.Width
                         Y: =lblchatmessageLdS.Y+lblchatmessageLdS.Height
                         ZIndex: =3
@@ -1357,8 +1357,10 @@ LeadScreen As screen:
             Fill: =RGBA(255, 0, 0, 1)
             FocusedBorderThickness: =
             HoverFill: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-            OnSelect: |
-                =Patch(LeadChats,Defaults(LeadChats),
+            OnSelect: |+
+                =If(IsBlank(txtinptchatmessageLdS.Text),
+                Notify("Please enter message to send",NotificationType.Information); ,
+                Patch(LeadChats,Defaults(LeadChats),
                 {
                     ID:GUID(),
                     Message:txtinptchatmessageLdS.Text,
@@ -1369,10 +1371,12 @@ LeadScreen As screen:
                     LeadInformationLID:LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID),
                     IsQQApp:true
                 });
-                
-                
                 Reset(txtinptchatmessageLdS);
                 Set(VarChatMessage,false);
+                );
+                
+                
+                
             PressedColor: =Self.Color
             PressedFill: =Self.Fill
             Text: ="Send Message"
