--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -275,7 +275,7 @@ ChatScreen As screen:
                     OnSelect: =Select(Parent)
                     PaddingLeft: =20
                     PaddingRight: =40
-                    Size: =18
+                    Size: =If(Parent.Width<500,16,Parent.Width>500,18)
                     Text: =ThisItem.Message
                     Width: =Parent.Width-Button1.Width-Button1.X
                     X: =Button1.X+Button1.Width
@@ -289,7 +289,7 @@ ChatScreen As screen:
                     OnSelect: =Select(Parent)
                     PaddingLeft: =20
                     PaddingRight: =40
-                    Size: =14
+                    Size: =If(Parent.Width<500,12,Parent.Width>500,14)
                     Text: |-
                         =//ThisItem.From & "  "& ThisItem.Datetime
                         ThisItem.FromName  & " "& TimeValue(ThisItem.'Created On')
@@ -312,6 +312,7 @@ ChatScreen As screen:
                     Fill: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
                     FontWeight: =FontWeight.Normal
+                    Height: =Parent.TemplateHeight/1.4
                     OnSelect: =Select(Parent)
                     PaddingLeft: =0
                     PaddingRight: =0
@@ -319,6 +320,7 @@ ChatScreen As screen:
                     RadiusBottomRight: =50
                     RadiusTopLeft: =50
                     RadiusTopRight: =50
+                    Size: =If(Parent.Width<500,11,Parent.Width>500,12)
                     Text: |-
                         =Left(ThisItem.FromName, 1) &
                         Mid(
@@ -326,7 +328,7 @@ ChatScreen As screen:
                             Find(" ", ThisItem.FromName) + 1,
                             1)
                     Visible: =If(ThisItem.IsQQApp=true,true,false)
-                    Width: =40
+                    Width: =Parent.TemplateHeight/1.4
                     X: =20
                     Y: =15
                     ZIndex: =5
