--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -59,7 +59,7 @@ ChatScreen As screen:
                     UpdateContext({locInfoExpanded:false})
                 PaddingBottom: =5
                 PaddingTop: =5
-                Width: =Parent.Width/20
+                Width: =Parent.Height/2
                 X: =18
                 Y: =11
                 ZIndex: =7
