--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -414,7 +414,7 @@ SubmittedLeadScreen As screen:
                         Y: =lblPriceSLS.Height+lblPriceSLS.Y
                         ZIndex: =22
 
-                    Icon4 As icon.Message:
+                    iconmsgsls As icon.Message:
                         Color: =RGBA(255, 0, 0, 1)
                         Fill: =RGBA(255, 255, 255, 1)
                         Height: =Parent.Width/20
