--- a/QuantumTechnicianApp/Src/LoadingScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LoadingScreen.fx.yaml
@@ -14,9 +14,7 @@ LoadingScreen As screen:
     TimerLS As timer:
         AutoStart: =true
         Duration: =5000
-        OnTimerEnd: |-
-            =//Navigate(DashboardScreen)
-            Navigate(DashboardScreen)
+        OnTimerEnd: =Navigate(DashboardScreen)
         PaddingRight: =5.34
         PaddingTop: =5.34
         Size: =13.88
@@ -33,7 +31,9 @@ LoadingScreen As screen:
         PaddingRight: =5.34
         PaddingTop: =5.34
         Size: =13.88
-        Text: ="version 1.0"
+        Text: |-
+            =//App version
+            "version 1.0"
         Width: =Parent.Width
         X: =0.00
         Y: =Parent.Height/1.6
