--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -360,7 +360,7 @@ DashboardScreen As screen:
                             Width: =Parent.Width
                             ZIndex: =3
 
-                ctnSoldLeadsDS_1 As groupContainer.manualLayoutContainer:
+                ctnInprogressLeadsDS As groupContainer.manualLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
@@ -374,14 +374,14 @@ DashboardScreen As screen:
                     Width: =Parent.Width/3.35
                     ZIndex: =2
 
-                    grpSoldLeadsDS_1 As group:
+                    grpInprogressLeadsDS As group:
                         Height: =5
                         Width: =5
                         X: =28.74418604651163
                         Y: =40
                         ZIndex: =3
 
-                        lblSoldLeadsDS_1 As label:
+                        lblInprogressLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =RGBA(116, 116, 116, 1)
@@ -393,13 +393,14 @@ DashboardScreen As screen:
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: |-
-                                =If(cumulatively=true,"InProgress Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")),"InProgress Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" && Year('Created On')=Year(Now())))) 
-                            Width: =btnSoldLeadsDS_1.Width
-                            X: =btnSoldLeadsDS_1.X
+                                =//its for count of yealy/cumulatively InProgress leads
+                                If(cumulatively=true,"InProgress Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")),"InProgress Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" && Year('Created On')=Year(Now())))) 
+                            Width: =btnInprogressLeadsDS.Width
+                            X: =btnInprogressLeadsDS.X
                             Y: =(Parent.Height-Self.Height)/2
                             ZIndex: =1
 
-                        btnSoldLeadsDS_1 As button:
+                        btnInprogressLeadsDS As button:
                             Color: =RGBA(0, 0, 0, 0)
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             Fill: =RGBA(0, 0, 0, 0)
@@ -424,7 +425,7 @@ DashboardScreen As screen:
                             Width: =Parent.Width
                             ZIndex: =3
 
-                ctnQuatedLeadsDS_2 As groupContainer.manualLayoutContainer:
+                ctnRejectedLeadsDS As groupContainer.manualLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(116, 116, 116, 1)
                     BorderThickness: =1
@@ -438,14 +439,14 @@ DashboardScreen As screen:
                     Width: =Parent.Width/3.35
                     ZIndex: =3
 
-                    grpQuotedLeadsDS_2 As group:
+                    grpRejectedLeadsDS As group:
                         Height: =5
                         Width: =5
                         X: =20
                         Y: =40
                         ZIndex: =3
 
-                        lblQuotedLeadsDS_2 As label:
+                        lblRejectedLeadsDS As label:
                             Align: =Align.Center
                             AutoHeight: =true
                             Color: =RGBA(116, 116, 116, 1)
@@ -457,14 +458,14 @@ DashboardScreen As screen:
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width<378,14,16)
                             Text: |-
-                                =//If(cumulatively=true, "Rejected Leads#" & Char(10)& "30","Rejected Leads#" & Char(10) &  "15")
+                                =//its for count of yealy/cumulatively InProgress leads
                                 If(cumulatively=true,"Rejected Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected")),"Rejected Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected" && Year('Created On')=Year(Now())))) 
-                            Width: =btnQuotedLeadsDS_2.Width
-                            X: =btnQuotedLeadsDS_2.X
+                            Width: =btngrpRejectedLeadsDS.Width
+                            X: =btngrpRejectedLeadsDS.X
                             Y: =(Parent.Height-Self.Height)/2
                             ZIndex: =1
 
-                        btnQuotedLeadsDS_2 As button:
+                        btngrpRejectedLeadsDS As button:
                             Color: =RGBA(0, 0, 0, 0)
                             DisabledBorderColor: =RGBA(116, 116, 116, 1)
                             Fill: =RGBA(0, 0, 0, 0)
@@ -580,7 +581,7 @@ DashboardScreen As screen:
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width<378,14,16)
                             Text: |-
-                                =//If(cumulatively=true, "Quoted Leads #" & Char(10)& "30","Quoted Leads #" & Char(10) &  "15")
+                                =///its for count of yealy/cumulatively InProgress leads
                                 If(cumulatively=true,"Quoted Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Quoted")),"Quoted Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Quoted" && Year('Created On')=Year(Now())))) 
                             Width: =btnQuotedLeadsDS.Width
                             X: =btnQuotedLeadsDS.X
@@ -686,7 +687,7 @@ DashboardScreen As screen:
                                 =//19.22
                                 If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: |-
-                                =//If(cumulatively=true,"Sold Leads #" & Char(10)& "40","Sold Leads #" & Char(10)& "15")
+                                =//its for count of yealy/cumulatively InProgress leads
                                 If(cumulatively=true,"Sold Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold")),"Sold Leads#" & Char(10)&  CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Sold" && Year('Created On')=Year(Now())))) 
                             Width: =btnSoldLeadsDS.Width
                             X: =btnSoldLeadsDS.X
@@ -743,18 +744,16 @@ DashboardScreen As screen:
                     HoverBorderColor: =Color.Red
                     HoverFill: =RGBA(255, 0, 0, 1)
                     OnSelect: |
-                        =Set(VarFormMode,Defaults(LeadInformations));
+                        =//for new form
+                        Set(VarFormMode,Defaults(LeadInformations));
                         Navigate(CreatLeadScreen);
+                        //VArindicator is indcates first step in progress bar
                         Set(VarIndicator,false);
+                        
                         NewForm(BuildingInfoForm);ResetForm(BuildingInfoForm);
-                        NewForm(EstimateForm);
-                        //NewForm(ImageUploadForm);
-                        NewForm(ScopeInfoForm);
-                        NewForm(UnitInfoForm);
-                        ResetForm(EstimateForm);
-                        //ResetForm(ImageUploadForm);
-                        ResetForm(ScopeInfoForm);
-                        ResetForm(UnitInfoForm);
+                        NewForm(EstimateForm);ResetForm(EstimateForm);
+                        NewForm(ScopeInfoForm);ResetForm(ScopeInfoForm);
+                        NewForm(UnitInfoForm);ResetForm(UnitInfoForm);
                         Clear(LeadImagesCollection);
                     PressedBorderColor: =Color.Red
                     RadiusBottomLeft: =6
