--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -790,3 +790,90 @@ DashboardScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
+    "Gallery2 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        BorderColor: =RGBA(255, 255, 255, 1)
+        BorderThickness: =1
+        Fill: =RGBA(237, 237, 237, 1)
+        Height: =1.08*(CountRows(Gallery2.AllItems)*(Gallery2.TemplateHeight))
+        Items: =Menu
+        Layout: =Layout.Vertical
+        ShowScrollbar: =false
+        TemplatePadding: =0
+        TemplateSize: =110
+        Visible: =varshowMenu
+        Width: =219
+        X: =10
+        Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+5
+        ZIndex: =2
+
+        Container10 As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.ExtraBold
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =100
+            Width: =Parent.Width/1.05
+            ZIndex: =8
+
+            Title4_11 As label:
+                AutoHeight: =true
+                Color: =RGBA(255, 0, 0, 1)
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Text: =ThisItem.Title
+                Width: =147
+                X: =61.571428571428555
+                Y: =30
+                ZIndex: =1
+
+            Separator4_11 As rectangle:
+                BorderColor: =RGBA(0, 0, 0, 1)
+                Fill: =RGBA(0, 0, 0, 1)
+                Height: =0
+                Width: =Parent.Width-20
+                X: =10
+                Y: =Parent.Height - 20
+                ZIndex: =2
+
+            Icon1_13 As icon.Add:
+                Color: =RGBA(255, 0, 0, 1)
+                Height: =34
+                Icon: =ThisItem.icon
+                Width: =45
+                X: =12
+                Y: =30
+                ZIndex: =3
+
+            Button9_11 As button:
+                Fill: =RGBA(0, 0, 0, 0)
+                Height: =100
+                HoverFill: =
+                OnSelect: |-
+                    =Navigate(ThisItem.Navigate);
+                    Set(VarFormMode,Defaults(LeadInformations));
+                    Set(Varmenubar,ThisItem.Navigate);
+                    Set(VarIndicator,false);
+                    NewForm(BuildingInfoForm);ResetForm(BuildingInfoForm);
+                    NewForm(EstimateForm);
+                    NewForm(ScopeInfoForm);
+                    NewForm(UnitInfoForm);
+                    ResetForm(EstimateForm);
+                    ResetForm(ScopeInfoForm);
+                    ResetForm(UnitInfoForm);
+                PressedFill: =
+                Size: =24
+                Text: =""
+                Width: =Parent.Width
+                ZIndex: =4
+
+            Rectangle4_11 As rectangle:
+                BorderColor: =RGBA(255, 0, 0, 1)
+                BorderThickness: =5
+                Fill: =RGBA(255, 0, 0, 1)
+                Height: =Parent.Height
+                Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
+                Width: =5
+                X: =1
+                ZIndex: =5
+
