--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -21,11 +21,14 @@ CreatLeadScreen As screen:
         ctnHeaderCL As groupContainer.horizontalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
             Fill: =RGBA(255, 255, 255, 1)
+            FillPortions: =0
             Height: |-
                 =//Parent.Height/13.5
                 ///If(Parent.Height<Parent.Width,Parent.Height/6,Parent.Height/18)
                 If(Parent.Height<Parent.Width,60,80)
             LayoutAlignItems: =LayoutAlignItems.Center
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =10
             PaddingRight: =10
@@ -99,9 +102,12 @@ CreatLeadScreen As screen:
 
         ctnUserHeaderCL As groupContainer.manualLayoutContainer:
             AlignInContainer: =AlignInContainer.SetByContainer
+            FillPortions: =0
             Height: |-
                 =//Parent.Height/14
                 If(Parent.Height<Parent.Width,Parent.Height/10,Parent.Height/16)
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
             PaddingRight: =0.00
             PaddingTop: =0.00
             Width: =Parent.Width-40
@@ -130,13 +136,19 @@ CreatLeadScreen As screen:
             Height: =Parent.Height-ctnHeaderCL.Height-ctnUserHeaderCL.Height-30
             LayoutAlignItems: =LayoutAlignItems.Center
             LayoutDirection: =LayoutDirection.Vertical
+            LayoutMinHeight: =100
+            LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             LayoutOverflowY: =LayoutOverflow.Scroll
             Width: =Parent.Width
             ZIndex: =3
 
             ctnProgressBarCreatLead As groupContainer.manualLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
+                FillPortions: =0
                 Height: =130
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
                 Width: =Parent.Width
                 X: =87
                 Y: =77
@@ -360,9 +372,13 @@ CreatLeadScreen As screen:
                     ZIndex: =24
 
             BuildingInfoForm As form:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DataSource: =LeadInformations
+                FillPortions: =0
                 Height: =If(Parent.Width>375,(BuildingName.Height+Address.Height+ContractNumber.Height+ZipCode.Height+30),(BuildingName.Height+Address.Height+ContractNumber.Height+ZipCode.Height+30))
                 Item: =VarFormMode
+                LayoutMinHeight: =250
+                LayoutMinWidth: =400
                 Width: =Parent.Width/1.04
                 Y: =143
                 ZIndex: =2
@@ -722,11 +738,15 @@ CreatLeadScreen As screen:
                         ZIndex: =4
 
             ctnbuttonUS_1 As groupContainer.horizontalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
+                FillPortions: =0
                 Height: =80
                 LayoutAlignItems: =LayoutAlignItems.Center
                 LayoutGap: =20
                 LayoutJustifyContent: =LayoutJustifyContent.Center
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
@@ -768,9 +788,12 @@ CreatLeadScreen As screen:
                     ZIndex: =2
 
             ctnForSpaceCL As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 Height: =Parent.Height-ctnProgressBarCreatLead.Height-ctnbuttonUS_1.Height-BuildingInfoForm.Height
                 LayoutDirection: =LayoutDirection.Vertical
+                LayoutMinHeight: =100
+                LayoutMinWidth: =250
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
